tests/snapshots/snapshots__budget_input_otp_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (999 tokens)

CHANGELOG.md
     1→# Changelog

README.md
     1→# The only accessible & unstyled & full featured Input OTP component in the Web.
     3→### OTP Input for React 🔐 by [@guilhermerodz](https://twitter.com/guilherme_rodz)
    20→## Usage
    39→## Default example
   136→## How it works
   141→## Features
   198→### Auto tracks if the input has space in the right side for the badge
   204→## API Reference
   206→### OTPInput
   210→#### Props
   293→## Examples
   377→## Caveats
   539→#### Sponsors

apps/storybook/README.md
    13→## 🚅 Quick start
    44→## 🔎 What's inside?
    83→## Contribute
    87→## Learning Storybook

apps/storybook/src/components/ui/input-otp.tsx
     7→import { cn } from "../../lib/utils"

apps/storybook/src/lib/utils.ts
     4→export function cn(...inputs: ClassValue[]) {
     5→  return twMerge(clsx(inputs))
     6→}

apps/storybook/src/stories/Button.stories.ts
     1→import { Button } from './Button';
    14→export const Primary = {
    21→export const Secondary = {
    27→export const Large = {
    34→export const Small = {

apps/storybook/src/stories/Button.tsx
     3→import './button.css';
     5→/**
     6→ * Primary UI component for user interaction
     7→ */
     8→export const Button = ({ primary, backgroundColor, size, label, ...props }) => {
     9→  const mode = primary ? 'storybook-button--primary' : 'storybook-button--secondary';
    10→  return (
    11→    <button
      →…

apps/storybook/src/stories/InputOTP.stories.tsx
     1→import { InputOTP, InputOTPGroup, InputOTPSlot } from "../components/ui/input-otp"
     4→const meta = {
    27→type Story = StoryObj<typeof meta>
    29→export const Default: Story = {}

apps/storybook/tailwind.config.js
     2→const config = {

apps/website/src/components/icons.tsx
     3→export const Icons = {

package.json

packages/input-otp/package.json

packages/input-otp/src/input.tsx
     3→import * as React from 'react'
    10→export const OTPInputContext = React.createContext<RenderProps>(
    14→export const OTPInput = React.forwardRef<HTMLInputElement, OTPInputProps>(
   540→function safeInsertRule(sheet: CSSStyleSheet, rule: string) {

packages/input-otp/src/regexp.ts
     1→export const REGEXP_ONLY_DIGITS = '^\\d+$'
     2→export const REGEXP_ONLY_CHARS = '^[a-zA-Z]+$'
     3→export const REGEXP_ONLY_DIGITS_AND_CHARS = '^[a-zA-Z0-9]+$'

packages/input-otp/src/sync-timeouts.ts
     1→export function syncTimeouts(cb: (...args: any[]) => unknown): number[] {

packages/input-otp/src/types.ts
     1→export interface SlotProps {
     2→  isActive: boolean
     3→  char: string | null
     4→  placeholderChar: string | null
     5→  hasFakeCaret: boolean
     6→}
     7→export interface RenderProps {
     8→  slots: SlotProps[]
     9→  isFocused: boolean
    10→  isHovering: boolean
    11→}
    12→type OverrideProps …
    13→type OTPInputBaseProps …
    32→type InputOTPRenderFn …
    33→export type OTPInputProps = OTPInputBaseProps &
    34→  (
    35→    | {

packages/input-otp/src/use-previous.ts
     1→import * as React from 'react'
     3→export function usePrevious<T>(value: T) {

packages/input-otp/src/use-pwm-badge.tsx
     1→import * as React from 'react'
    15→export function usePasswordManagerBadge …

packages/input-otp/tsconfig.json

pnpm-workspace.yaml
     1→packages:

turbo.json
