tests/snapshots/snapshots__budget_input_otp_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2007 tokens)

CHANGELOG.md
     1→# Changelog

README.md
     1→# The only accessible & unstyled & full featured Input OTP component in the Web.
     3→### OTP Input for React 🔐 by [@guilhermerodz](https://twitter.com/guilherme_rodz)
    20→## Usage
    39→## Default example
   136→## How it works
   141→## Features
   198→### Auto tracks if the input has space in the right side for the badge
   204→## API Reference
   206→### OTPInput
   210→#### Props
   293→## Examples
   377→## Caveats
   539→#### Sponsors

apps/storybook/README.md
    13→## 🚅 Quick start
    44→## 🔎 What's inside?
    83→## Contribute
    87→## Learning Storybook

apps/storybook/components.json
     2→  "$schema": "https://ui.shadcn.com/schema.json",
     3→  "style": "new-york",
     4→  "rsc": true,
     5→  "tsx": true,
     6→  "tailwind": {
    12→  },
    13→  "aliases": {
    16→  }
    17→}

apps/storybook/package.json
     2→  "name": "storybook",
     3→  "private": true,
     4→  "version": "0.2.0",
     5→  "type": "module",
     6→  "repository": {
    10→  "bugs": {
    13→  "license": "MIT",
    14→  "dependencies": {
    24→  "scripts": {
    29→  "devDependencies": {

apps/storybook/src/components/ui/input-otp.tsx
     3→import * as React from "react"
     4→import { DashIcon } from "@radix-ui/react-icons"
     5→import { OTPInput, SlotProps } from "input-otp"
     7→import { cn } from "../../lib/utils"
     9→const InputOTP = React.forwardRef<
    21→const InputOTPGroup = React.forwardRef<
    29→const InputOTPSlot = React.forwardRef<
    54→const InputOTPSeparator = React.forwardRef<

apps/storybook/src/lib/utils.ts
     4→export function cn(...inputs: ClassValue[]) {

apps/storybook/src/stories/Button.stories.ts
     1→import { Button } from './Button';
    14→export const Primary = {
    21→export const Secondary = {
    27→export const Large = {
    34→export const Small = {

apps/storybook/src/stories/Button.tsx
     1→import React from 'react';
     2→import PropTypes from 'prop-types';
     3→import './button.css';
     6→ * Primary UI component for user interaction
     8→export const Button = ({ primary, backgroundColor, size, label, ...props }) => {

apps/storybook/src/stories/InputOTP.stories.tsx
     1→import { InputOTP, InputOTPGroup, InputOTPSlot } from "../components/ui/input-otp"
     4→const meta = {
    27→type Story = StoryObj<typeof meta>
    29→export const Default: Story = {}

apps/storybook/tailwind.config.js
     2→const config = {

apps/storybook/tsconfig.json
     2→  "compilerOptions": {
    21→  },
    22→  "include": ["src"],
    23→  "references": [{ "path": "./tsconfig.node.json" }]
    24→}

apps/storybook/tsconfig.node.json
     2→  "compilerOptions": {
     7→  },
     8→  "include": ["vite.config.ts"]
     9→}

apps/test/README.md
     3→## Getting Started
    23→## Learn More
    32→## Deploy on Vercel

apps/website/README.md
     3→## Getting Started
    23→## Learn More
    32→## Deploy on Vercel

package.json
     2→  "name": "root",
     3→  "private": true,
     4→  "author": "Guilherme Rodz <g@rodz.dev>",
     5→  "description": "One-time password input component for React.",
     6→  "homepage": "https://input-otp.rodz.dev/",
     7→  "workspaces": [
    10→  ],
    11→  "scripts": {
    30→  },
    31→  "prettier": {
    40→  },
    41→  "trustedDependencies": [
    43→  ],
    44→  "devDependencies": {
    59→  }
    60→}

packages/input-otp/package.json
     2→  "name": "input-otp",
     3→  "version": "1.4.2",
     4→  "author": "Guilherme Rodz <g@rodz.dev>",
     5→  "description": "One-time password input component for React.",
     6→  "license": "MIT",
     7→  "homepage": "https://input-otp.rodz.dev/",
     8→  "repository": {
    13→  "bugs": {
    16→  "keywords": [
    22→  "main": "./dist/index.js",
    23→  "module": "./dist/index.mjs",
    24→  "types": "./dist/index.d.ts",
    25→  "files": [
    28→  "exports": {
    38→  "scripts": {
    55→  "eslintConfig": {
   111→  "devDependencies": {
   118→  "peerDependencies": {

packages/input-otp/src/input.tsx
     3→import * as React from 'react'
     5→import { syncTimeouts } from './sync-timeouts'
     6→import { OTPInputProps, RenderProps } from './types'
     7→import { usePrevious } from './use-previous'
     8→import { usePasswordManagerBadge } from './use-pwm-badge'
    10→export const OTPInputContext = React.createContext<RenderProps>(
    14→export const OTPInput = React.forwardRef<HTMLInputElement, OTPInputProps>(
   540→function safeInsertRule(sheet: CSSStyleSheet, rule: string) {
   553→const NOSCRIPT_CSS_FALLBACK = `

packages/input-otp/src/regexp.ts
     1→export const REGEXP_ONLY_DIGITS = '^\\d+$'
     2→export const REGEXP_ONLY_CHARS = '^[a-zA-Z]+$'
     3→export const REGEXP_ONLY_DIGITS_AND_CHARS = '^[a-zA-Z0-9]+$'

packages/input-otp/src/sync-timeouts.ts
     1→export function syncTimeouts(cb: (...args: any[]) => unknown): number[] {

packages/input-otp/src/types.ts
     1→export interface SlotProps {
     2→  isActive: boolean
      →  …
     7→export interface RenderProps {
     8→  slots: SlotProps[]
      →  …
    12→type OverrideProps …
    13→type OTPInputBaseProps …
    32→type InputOTPRenderFn …
    33→export type OTPInputProps = OTPInputBaseProps &
    34→  (
    35→    | {

packages/input-otp/src/use-previous.ts
     1→import * as React from 'react'
     3→export function usePrevious<T>(value: T) {
     4→  const ref = React.useRef<T>()
     5→  React.useEffect(() => {
      →  …

packages/input-otp/src/use-pwm-badge.tsx
     1→import * as React from 'react'
     2→import { OTPInputProps } from './types'
     4→const PWM_BADGE_MARGIN_RIGHT = 18
     5→const PWM_BADGE_SPACE_WIDTH_PX = 40
     6→const PWM_BADGE_SPACE_WIDTH = `${PWM_BADGE_SPACE_WIDTH_PX}px` as const
     8→const PASSWORD_MANAGERS_SELECTORS = [
    15→export function usePasswordManagerBadge …

packages/input-otp/tsconfig.json
     2→  "compilerOptions": {
    11→  },
    12→  "include": ["src"]
    13→}

pnpm-workspace.yaml
     1→packages:

turbo.json
     2→  "extends": ["//"],
     3→  "$schema": "https://turbo.build/schema.json",
     4→  "pipeline": {
    35→  }
    36→}
